# zaawansowane-proj1

./: .gitignore  CMakeLists.txt  build.sh  generate_docs.sh
docs/: .doxyfile
docs/html/: annotated.html  classDoubleLinkedList-members.html  classDoubleLinkedList.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doublelinkedlist_8cpp.html  doublelinkedlist_8h.html  doublelinkedlist_8h_source.html  doublelinkedlist_8hpp.html  doublelinkedlist_8hpp_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  classes_0.js  files_0.js  functions_1.js  functions_2.js  functions_5.js  searchdata.js
docs/latex/: annotated.tex  classDoubleLinkedList.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  doublelinkedlist_8cpp.tex  doublelinkedlist_8h.tex  doublelinkedlist_8h_source.tex  doublelinkedlist_8hpp.tex  doublelinkedlist_8hpp_source.tex  files.tex  main_8cpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
docs/manual/: bibliografia.bib  dokument.aux  dokument.bcf  dokument.bcf-SAVE-ERROR  dokument.blg  dokument.fdb_latexmk  dokument.fls  dokument.lol  dokument.out  dokument.run.xml  dokument.tex  dokument.toc  preambula_pakiety.tex  strona_tytulowa.sty
docs/manual/kod/: main.cpp
docs/manual/tex/: rozdzial1.tex  rozdzial2.tex  rozdzial3.tex  rozdzial4.tex  rozdzial5.tex
src/: CMakeLists.txt  doublelinkedlist.hpp  main.cpp
